--- a/src/app/components/shared/gmap/gmap.component.scss
+++ b/src/app/components/shared/gmap/gmap.component.scss
@@ -2,8 +2,10 @@
 
 #map {
     background-color: $background-color-card;
+    border: 0;
     height: 400px;
-    width: 465px;
-    max-width: 465px;
-    margin: 0 4px 4px 4px;
+    width: 404px;
+    max-width: 404px;
+    margin: 0;
+    padding: 0;
 }
